<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/common_blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/my_frg"
            android:textColor="#fff"
            android:textSize="18sp" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/family_rounded_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_mid"
            android:layout_marginRight="@dimen/text_mid"
            android:scaleType="centerCrop"
            android:src="@drawable/rounded_img2"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_address"
        style="@style/FamilySettingText"
        android:text="@string/my_address" />

    <TextView
        android:id="@+id/tv_indent"
        style="@style/FamilySettingText"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:text="@string/my_indent" />

    <TextView
        android:id="@+id/tv_activity"
        style="@style/FamilySettingText"
        android:layout_marginTop="0.5dp"
        android:text="@string/my_activity" />

    <TextView
        android:id="@+id/tv_setting"
        style="@style/FamilySettingText"
        android:layout_marginTop="10dp"
        android:text="@string/my_setting" />

    <TextView
        android:id="@+id/tv_help"
        style="@style/FamilySettingText"
        android:layout_marginTop="10dp"
        android:text="@string/my_help" />

    <TextView
        android:id="@+id/tv_idea"
        style="@style/FamilySettingText"
        android:layout_marginTop="0.5dp"
        android:text="@string/my_idea" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:gravity="center"
        android:text="@string/my_login"
        android:textColor="#000"

        android:textSize="16sp" />


</LinearLayout>
