<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">
    <include layout="@layout/tb_friends_circle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/feedback_tv_application"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/text_small"
            android:text="@string/feedback_tv_application"
            android:textColor="@color/common_black"
            android:drawableTop="@drawable/application"/>
        <TextView
            android:id="@+id/feedback_tv_watches"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:text="@string/feedback_tv_watches"
            android:textColor="@color/common_black"
            android:drawableTop="@drawable/wrist_watches"/>
        <TextView
            android:id="@+id/feedback_tv_power_consumption"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:text="@string/feedback_tv_power_consumption"
            android:textColor="@color/common_black"
            android:drawableTop="@drawable/power_consumption"/>
        <TextView
            android:id="@+id/feedback_tv_watch_appearance"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:text="@string/feedback_tv_watch_appearance"
            android:textColor="@color/common_black"
            android:drawableTop="@drawable/watch_appearance"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/feedback_tv_other"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="@dimen/text_small"
            android:text="@string/feedback_tv_other"
            android:textColor="@color/common_black"
            android:drawableTop="@drawable/other"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:textColor="@color/common_black"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:textColor="@color/common_black"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            android:padding="10dp"
            android:textColor="@color/common_black"/>
    </LinearLayout>

</LinearLayout>
