<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/family_lv_item_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/step"/>
        <TextView
            android:id="@+id/family_tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/family_tv_item_title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/family_lv_item_my_step_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/family_lv_item_my_step_content"
            android:paddingLeft="40dp"
            android:textSize="@dimen/text_less_mid"
            android:textColor="@color/common_black"
            android:gravity="left|center_vertical"/>
        <TextView
            android:id="@+id/family_lv_item_my_step_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="40dp"
            android:text="@string/family_lv_item_my_step_time"
            android:gravity="left|top"/>
    </LinearLayout>




</LinearLayout>
